# enola

./: .bazel-steward.yaml  .bazelproject  .editorconfig  .gitignore  .pre-commit-config.yaml  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  maven_install.json  settings.gradle.kts  test.bash
.github/workflows/: test.yaml
app/: build.gradle.kts
app/src/main/java/dev/enola/app/: App.java  MessageUtils.java
app/src/test/java/dev/enola/app/: MessageUtilsTest.java
build-logic/: settings.gradle.kts
cli/: BUILD
core/impl/: BUILD
core/impl/src/main/java/dev/enola/core/: EnolaServiceProvider.java  EnolaServiceRegistry.java  EntityAspectService.java
core/impl/src/main/java/dev/enola/core/thing/: ThingAspect.java  ThingAspectService.java
core/impl/src/test/resources/: test-types.yaml
core/lib/: BUILD
core/lib/src/main/java/dev/enola/core/meta/: enola_meta.proto
docs/concepts/: other.md
docs/dev/: ide.md
java/dev/enola/cli/: BUILD  EnolaCLITest.java
list/: build.gradle.kts
list/src/main/java/dev/enola/list/: LinkedList.java
list/src/test/java/dev/enola/list/: LinkedListTest.java
tools/lint/: BUILD.bazel
utilities/: build.gradle.kts
utilities/src/main/java/dev/enola/utilities/: JoinUtils.java  SplitUtils.java  StringUtils.java
web/ui/: BUILD
web/ui/src/main/java/dev/enola/web/ui/: ThingUI.java  UI.java
web/ui/src/main/resources/templates/: index.html
web/ui/src/test/java/dev/enola/web/ui/: UiTest.java
